--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --secondary_color_low_opac: rgba(0, 116, 217, 0.37);
     --almost_white: #E5EAF5;
     --text_gray: #8e8e8e;
+    --hover_color: #001f3f;
+
 }
 
 /* ********** Body ********** */
@@ -89,7 +91,7 @@
 
 .form button:hover {
     cursor: pointer;
-    background: #7FDBFF;
+    background: var(--hover_color);
     border: black;
     outline: black;
 }
@@ -246,7 +248,60 @@ li a:hover {
 }
 #ul_contacts tr {
     background-color: var(--secondary_color_low_opac);
+    background-color: var(--secondary_color_low_opac);
 }
 
 
+.add_form{
+    position: relative;
+    text-align: center;
+    background-color: var(--secondary_color_low_opac);
+    background-blend-mode: soft-light;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #000;
+    padding-bottom: 25px;
+    margin: 20px 25px;
+    color:white;
+}
 
+.add_contact_from label{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    text-align: right;
+    width: 400px;
+    line-height: 26px;
+    margin-bottom: 10px;
+
+}
+.add_contact_from input{
+
+    height: 20px;
+    flex: 0 0 200px;
+    margin-left: 10px;
+
+
+}
+.add_contact_from button{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    background: var(--secondary_color_low_opac);
+    width: 10%;
+    border-radius:30px;
+    margin: 0 0 8px;
+    padding: 15px;
+    color: #FFFFFF;
+    outline: none;
+    border: none;
+    position: absolute;
+    left:    200px;
+    bottom:   0;
+}
+.add_contact_from button:hover{
+    cursor: pointer;
+    background: var(--hover_color);
+    border: black;
+    outline: black;
+}
