Implemented Update Contact Screen Filled values with placeholder data Fixed Check Box Positioning Added Headlines for the forms
*** Pair Programming ***
Used Grid instead of Flex for the Forms
Fixed Form Layout

--- a/style.css
+++ b/style.css
@@ -250,63 +250,60 @@ li a:hover {
     background-color: var(--secondary_color_low_opac);
 }
 
-
-.add_form{
-    position: relative;
-    text-align: center;
+.addContactForm {
     background-color: var(--secondary_color_low_opac);
     background-blend-mode: soft-light;
     border-radius: 10px;
     box-shadow: 0 0 15px #000;
-    padding-bottom: 25px;
-    margin: 20px 25px;
     color:white;
-}
 
-.add_contact_from label{
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-gap: 10px;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    text-align: right;
-    width: 400px;
-    line-height: 26px;
-    margin-bottom: 10px;
+    padding: 1em;
+    margin: 2rem auto 0 auto;
+    max-width: 25%;
 
 }
-.add_contact_from input{
 
-    height: 20px;
-    flex: 0 0 200px;
-    margin-left: 10px;
+.addContactForm input, select {
+    grid-column: 2 / 3;
 
-
+    border: 1px solid #9c9c9c;
+    padding: 0.5em;
+    margin-bottom: 0.5rem;
 }
-.add_contact_from button{
+
+.addContactForm label {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-align: left;
+    grid-column: 1 / 2;
+}
+
+.addContactForm h1 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    grid-column: 1 / 4;
+}
+
+.addContactForm button {
+    grid-column: 1 / 4;
+
+
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
     font-weight: bold;
     background: var(--secondary_color_low_opac);
-    width: 10%;
     border-radius:30px;
-    margin: 0 0 8px;
-    padding: 15px;
     color: #FFFFFF;
     outline: none;
     border: none;
-    position: absolute;
-    left:    200px;
-    bottom:   0;
 }
-.add_contact_from button:hover{
+
+
+.addContactForm button:hover{
     cursor: pointer;
     background: var(--hover_color);
     border: black;
     outline: black;
-}
-.add_contact_from select{
-    height: 20px;
-    flex: 0 0 200px;
-    margin-left: 10px;
-
 }
