--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     color: black;
 }
 
-#loginErrorMessage {
+#loginErrorMessage, #addContactErrorLabel {
     color: red;
     font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 
