--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,9 +10,13 @@
 
     --secondary_color: #0074D9;
     --secondary_color_low_opac: rgba(0, 116, 217, 0.37);
-    --almost_white: #E5EAF5;
+    --almost_white: #bfc3d2;
     --text_gray: #8e8e8e;
     --hover_color: #001f3f;
+
+    --notify_color_error: #FF4136;
+    --notify_color_warning: #FFDC00;
+    --notify_color_success: #2ECC40;
 
 }
 
@@ -170,7 +174,7 @@
 }
 
 .headerButtons {
-    border-right: 1px solid var(--almost_white);
+    border-right: 1px solid white;
     display: inline-block;
 }
 
@@ -185,7 +189,7 @@
 
 li a, .headerWelcomeMessage {
     display: block;
-    color: var(--almost_white);
+    color: white;
     text-align: center;
     padding: 10px 20px;
     text-decoration: none;
@@ -331,4 +335,44 @@ li a:hover {
 #cList a:hover {
     background: #DCDDE1;
 }
+
+#alert{
+    background: var(--almost_white);
+    padding: 20px 40px;
+    min-width: 420px;
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 10px;
+    border-radius: 4px;
+    border-left: 8px solid var(--secondary_color);
+    overflow: hidden;
+    pointer-events: auto;
+}
+
+#alert #notifyMessage{
+    padding: 0 20px;
+    font-size: 18px;
+    color: #020202;
+}
+#alert #notifyCloseButton{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--secondary_color);
+    padding: 20px 18px;
+    cursor: pointer;
+
+}
+#alert #notifyCloseButton:hover{
+    background: var(--secondary_color_low_opac);
+}
+#alert #notifyCloseButton .fas{
+    color: #e7e2e2;
+    font-size: 22px;
+    line-height: 40px;
+
+}
+
 
