--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@
     color: black;
 }
 
-#loginErrorMessage, #addContactErrorLabel {
+#loginErrorMessage, #addContactErrorLabel #updateContactErrorLabel {
     color: red;
     font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 
@@ -133,7 +133,7 @@
 
 /* ********** MAP SCREEN ********** */
 
-#header {
+.header {
     grid-area: header;
 }
 .contactList {
@@ -178,7 +178,7 @@
     display: inline-block;
 }
 
-.headerButtonsNoBorder, .headerAdvizButton, .headerWelcomeMessage {
+.logoutBtn, .headerAdvizButton, .headerWelcomeMessage {
     display: inline-block;
 }
 
@@ -374,5 +374,16 @@ li a:hover {
     line-height: 40px;
 
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
 
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+}
 
